--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.1",
+    "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
     "react-leaflet": "^5.0.0",
