--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.13.0",
     "chart.js": "^4.5.1",
+    "file-saver": "^2.0.5",
     "leaflet": "^1.9.4",
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
